// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxForm customize 1`] = `
<div>
  <form
    class="was-validated bazinga"
  >
    Test
  </form>
</div>
`;

exports[`CxForm example 1`] = `
<div>
  <form
    class=""
  >
    <label
      class="form-label"
    >
      A
    </label>
    <input
      aria-describedby="B"
      class="form-input"
      type="email"
    />
    <div
      class="form-help"
    >
      C
    </div>
    <label
      class="form-check"
    >
      <span
        class="check-input"
      >
        <input
          class=""
          data-react-aria-pressable="true"
          tabindex="0"
          type="checkbox"
        />
      </span>
      D
    </label>
    <button
      class="button primary"
      type="submit"
    >
      E
    </button>
  </form>
</div>
`;

exports[`loads and displays CxForm component 1`] = `
<div>
  <form
    class=""
  >
    Test
  </form>
</div>
`;
